--- a/CFactorial.vcxproj
+++ b/CFactorial.vcxproj
@@ -151,6 +151,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="test.cf" />
+    <None Include="test3.cf" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="test2.cf" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
